define the feeder IDL and modified the product api
