# cmd/http/docs/swagger.yaml
@@ -1,10 +1,4 @@
 definitions:
-  example.AddModelBody:
-    properties:
-      name:
-        example: 豪华旗舰款
-        type: string
-    type: object
   example.AddProductData:
     properties:
       brand_id:
@@ -201,15 +195,6 @@ definitions:
         type: string
       username:
         example: demon_wang
-        type: string
-    type: object
-  example.ModelData:
-    properties:
-      id:
-        example: 1
-        type: integer
-      name:
-        example: 豪华旗舰款
         type: string
     type: object
   example.NewBannerBody:
@@ -2328,184 +2313,6 @@ paths:
       summary: get product list
       tags:
       - products
-  /api/products/models/add:
-    post:
-      operationId: AddNewModel
-      parameters:
-      - description: Bearer User's access token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: model request body
-        in: body
-        name: models
-        required: true
-        schema:
-          $ref: '#/definitions/example.AddModelBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            allOf:
-            - $ref: '#/definitions/example.RespOk'
-            - properties:
-                data:
-                  $ref: '#/definitions/example.ModelData'
-              type: object
-        "400":
-          description: bad request
-          schema:
-            $ref: '#/definitions/example.RespBadRequest'
-        "401":
-          description: authentication failed
-          schema:
-            $ref: '#/definitions/example.RespUnauthorized'
-        "404":
-          description: not found
-          schema:
-            $ref: '#/definitions/example.RespNotFound'
-        "500":
-          description: internal error
-          schema:
-            $ref: '#/definitions/example.RespInternal'
-      summary: add a new product model
-      tags:
-      - product models
-  /api/products/models/delete:
-    delete:
-      operationId: DeleteModel
-      parameters:
-      - description: Bearer User's access token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: model id
-        in: query
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            allOf:
-            - $ref: '#/definitions/example.RespOk'
-            - properties:
-                data:
-                  $ref: '#/definitions/example.Empty'
-              type: object
-        "400":
-          description: bad request
-          schema:
-            $ref: '#/definitions/example.RespBadRequest'
-        "401":
-          description: authentication failed
-          schema:
-            $ref: '#/definitions/example.RespUnauthorized'
-        "404":
-          description: not found
-          schema:
-            $ref: '#/definitions/example.RespNotFound'
-        "500":
-          description: internal error
-          schema:
-            $ref: '#/definitions/example.RespInternal'
-      summary: delete a product model
-      tags:
-      - product models
-  /api/products/models/detail:
-    get:
-      operationId: GetModelDetail
-      parameters:
-      - description: Bearer User's access token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: id
-        in: query
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            allOf:
-            - $ref: '#/definitions/example.RespOk'
-            - properties:
-                data:
-                  $ref: '#/definitions/example.DeviceData'
-              type: object
-        "400":
-          description: bad request
-          schema:
-            $ref: '#/definitions/example.RespBadRequest'
-        "401":
-          description: authentication failed
-          schema:
-            $ref: '#/definitions/example.RespUnauthorized'
-        "404":
-          description: not found
-          schema:
-            $ref: '#/definitions/example.RespNotFound'
-        "500":
-          description: internal error
-          schema:
-            $ref: '#/definitions/example.RespInternal'
-      summary: get product model detail
-      tags:
-      - product models
-  /api/products/models/list:
-    get:
-      operationId: GetAllModels
-      parameters:
-      - description: Bearer User's access token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            allOf:
-            - $ref: '#/definitions/example.RespOk'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/example.ModelData'
-                  type: array
-              type: object
-        "400":
-          description: bad request
-          schema:
-            $ref: '#/definitions/example.RespBadRequest'
-        "401":
-          description: authentication failed
-          schema:
-            $ref: '#/definitions/example.RespUnauthorized'
-        "404":
-          description: not found
-          schema:
-            $ref: '#/definitions/example.RespNotFound'
-        "500":
-          description: internal error
-          schema:
-            $ref: '#/definitions/example.RespInternal'
-      summary: get all models
-      tags:
-      - product models
   /api/products/rating/update:
     put:
       operationId: UpdateRating
