# cmd/http/router/model/model.go
@@ -1,34 +1,0 @@
-// Code generated by hertz generator. DO NOT EDIT.
-
-package model
-
-import (
-	"github.com/cloudwego/hertz/pkg/app/server"
-
-	model "git.zqbjj.top/pet/services/cmd/http/api/model"
-)
-
-/*
- This file will register all the routes of the services in the master idl.
- And it will update automatically when you use the "update" command for the idl.
- So don't modify the contents of the file, or your code will be deleted when it is updated.
-*/
-
-// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
-func Register(r *server.Hertz) {
-
-	root := r.Group("/", rootMw()...)
-	{
-		_api := root.Group("/api", _apiMw()...)
-		{
-			_products := _api.Group("/products", _productsMw()...)
-			{
-				_models := _products.Group("/models", _modelsMw()...)
-				_models.POST("/add", append(_addnewmodelMw(), model.AddNewModel)...)
-				_models.DELETE("/delete", append(_deletemodelMw(), model.DeleteModel)...)
-				_models.GET("/detail", append(_getmodeldetailMw(), model.GetModelDetail)...)
-				_models.GET("/list", append(_getallmodelsMw(), model.GetAllModels)...)
-			}
-		}
-	}
-}
